[package]
name = "incident-company-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.13", features = ["json"] }
tokio-util = "0.7.13"
chrono = "0.4.40"
rand = "0.9.0"